# main/public/swagger.json
@@ -340,10 +340,20 @@
         "x-nestia-jsDocTags": []
       }
     },
-    "/vpn/endpoints/{endpointId}/connect": {
+    "/vpn/gateway/{gatewayId}/endpoints/{endpointId}/connect": {
       "get": {
         "tags": [],
         "parameters": [
+          {
+            "name": "gatewayId",
+            "in": "path",
+            "description": "",
+            "schema": {
+              "type": "string",
+              "nullable": false
+            },
+            "required": true
+          },
           {
             "name": "endpointId",
             "in": "path",
@@ -362,14 +372,24 @@
           }
         },
         "description": "",
-        "x-nestia-namespace": "vpn.endpoints.connect.connectToEndpoint",
+        "x-nestia-namespace": "vpn.gateway.endpoints.connect.connectToEndpoint",
         "x-nestia-jsDocTags": []
       }
     },
-    "/vpn/endpoints/{endpointId}/disconnect": {
+    "/vpn/gateway/{gatewayId}/endpoints/{endpointId}/disconnect": {
       "get": {
         "tags": [],
         "parameters": [
+          {
+            "name": "gatewayId",
+            "in": "path",
+            "description": "",
+            "schema": {
+              "type": "string",
+              "nullable": false
+            },
+            "required": true
+          },
           {
             "name": "endpointId",
             "in": "path",
@@ -388,7 +408,7 @@
           }
         },
         "description": "",
-        "x-nestia-namespace": "vpn.endpoints.disconnect.disconnectFromEndpoint",
+        "x-nestia-namespace": "vpn.gateway.endpoints.disconnect.disconnectFromEndpoint",
         "x-nestia-jsDocTags": []
       }
     }
@@ -398,12 +418,12 @@
       "ILoginStatus": {
         "type": "object",
         "properties": {
-          "logged": {
+          "loggedIn": {
             "type": "boolean",
             "nullable": false,
             "x-typia-required": true
           },
-          "vpnLogged": {
+          "vpnLoggedIn": {
             "type": "boolean",
             "nullable": false,
             "x-typia-required": false
@@ -437,17 +457,23 @@
             "type": "string",
             "nullable": false,
             "x-typia-required": true
+          },
+          "hostname": {
+            "type": "string",
+            "nullable": false,
+            "x-typia-required": true
           }
         },
         "nullable": false,
         "required": [
-          "logged",
+          "loggedIn",
           "username",
           "organization",
           "orgResourceId",
           "organizationId",
           "instanceId",
-          "lastError"
+          "lastError",
+          "hostname"
         ],
         "x-typia-jsDocTags": []
       },
@@ -831,6 +857,11 @@
       "IVPNGateway": {
         "type": "object",
         "properties": {
+          "gatewayId": {
+            "type": "string",
+            "nullable": false,
+            "x-typia-required": true
+          },
           "deviceId": {
             "type": "string",
             "nullable": false,
@@ -869,6 +900,7 @@
         },
         "nullable": false,
         "required": [
+          "gatewayId",
           "deviceId",
           "name",
           "status",
@@ -880,11 +912,6 @@
       "IVPNEndpoint": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "string",
-            "nullable": false,
-            "x-typia-required": true
-          },
           "deviceId": {
             "type": "string",
             "nullable": false,
@@ -907,7 +934,6 @@
         },
         "nullable": false,
         "required": [
-          "id",
           "deviceId",
           "name",
           "connectedUsers"
